fonte add e formulário corrigido

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,7 @@ header {
   width: 100%;
   background-color: $subColor;
   a {
-    font: normal normal medium 12px/16px FoundryMonoline;
+    font: normal normal normal 14px/16px "Poppins";
     color: $smalTxt;
   }
   .fa {
