--- a/src/sass/layout/main/_aside.scss
+++ b/src/sass/layout/main/_aside.scss
@@ -10,12 +10,12 @@ aside {
   .info {
     margin: 25px 97px;
     .h2 {
-      font: normal normal 31px/40px FoundryMonoline-ExBdIta;
+      font: italic normal normal 31px/40px "Poppins";
       color: $mainColor;
       text-transform: uppercase;
     }
     p {
-      font: normal normal normal 20px/24px FoundryMonoline-Regular;
+      font: normal normal normal 20px/24px "Poppins";
       color: $mainColor;
     }
   }
@@ -28,23 +28,18 @@ aside {
     position: relative;
     background-image: url("../img/Retângulo 11@2x.png");
     background-size: cover;
-    // background-repeat: no-repeat;
-    background-position: center;
     height: 28vh !important;
-
-    // background-position: center;
-    // background-position-x: -280px;
     .info {
       position: absolute;
       bottom: 0;
       margin: 0 auto !important;
       .h2 {
-        font: normal normal 22px/20px FoundryMonoline-ExBdIta !important;
+        font: normal normal 22px/20px "Poppins" !important;
         color: $mainColor;
         text-transform: uppercase;
       }
       p {
-        font: normal normal normal 18px/16px FoundryMonoline-Regular !important;
+        font: normal normal normal 16px/16px "Poppins" !important;
         color: $mainColor;
       }
     }
