--- a/src/sass/layout/main/_container-cars.scss
+++ b/src/sass/layout/main/_container-cars.scss
@@ -2,7 +2,8 @@
   .h3 {
     margin: 55px 97px;
     color: $text;
-    font: italic normal normal 34px/46px FoundryMonoline-ExBdIta;
+    font: italic normal normal 34px/46px "Poppins";
+    // font-family: "Hind", sans-serif;
     text-transform: uppercase;
   }
   .gallery {
@@ -26,7 +27,7 @@
     color: $text;
     margin: 25px 97px;
     // text-align: center;
-    font: normal normal normal 18px/24px FoundryMonoline-Regular;
+    font: normal normal normal 18px/24px "Poppins";
   }
 }
 // reposive
@@ -34,7 +35,7 @@
 @media (min-width: 200px) and (max-width: 800px) {
   .h3 {
     text-align: center;
-    font: italic normal normal 24px/30px FoundryMonoline-ExBdIta !important;
+    font: italic normal normal 24px/30px "Poppins" !important;
 
     margin: 0 auto !important;
   }
@@ -48,5 +49,6 @@
   .info {
     text-align: center;
     margin: 0 auto !important;
+    font-size: 15px !important;
   }
 }
