--- a/src/sass/layout/main/_section.scss
+++ b/src/sass/layout/main/_section.scss
@@ -12,7 +12,7 @@ section {
       color: $centralTxt;
       text-transform: uppercase;
       letter-spacing: -0.7px;
-      font: italic normal normal 20px/20px FoundryMonoline-MedIta;
+      font: italic normal normal 20px/20px "Poppins";
       padding: 0;
       margin: 0;
     }
@@ -20,7 +20,7 @@ section {
       color: $red;
       padding: 0;
       margin: 0;
-      font: italic normal normal 38px/45px FoundryMonoline-ExBdIta;
+      font: italic normal normal 34px/52px "Poppins";
     }
   }
 }
@@ -31,7 +31,9 @@ section {
   section {
     flex-wrap: wrap;
     .logo {
-      margin: 10px auto !important;
+      transform: translateX(0) !important;
+
+      margin: 15px auto !important;
       width: 100% !important;
       display: flex;
       justify-content: center;
@@ -43,7 +45,7 @@ section {
         color: $centralTxt;
         text-transform: uppercase;
         letter-spacing: -0.7px;
-        font: italic normal normal 15px/10px FoundryMonoline-MedIta;
+        font: italic normal normal 15px/10px "Poppins";
         padding: 0;
         margin: 0;
       }
@@ -51,7 +53,7 @@ section {
         color: $red;
         padding: 0;
         margin: 0;
-        font: italic normal normal 20px/25px FoundryMonoline-ExBdIta;
+        font: italic normal normal 20px/25px "Poppins";
       }
     }
   }
