--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,500;1,900&display=swap");
 @import "base/reset";
 @import "module/export";
 @import "layout/export";
