--- a/src/sass/layout/main/_container-cars.scss
+++ b/src/sass/layout/main/_container-cars.scss
@@ -20,10 +20,10 @@
     }
     .cars {
       margin-left: 35px;
-      width: 90%;
     }
   }
   .info {
+    width: 870px;
     color: $text;
     margin: 25px 97px;
     // text-align: center;
