--- a/src/sass/layout/main/_content.scss
+++ b/src/sass/layout/main/_content.scss
@@ -192,7 +192,12 @@
     }
   }
 }
-
+@media (max-width: 900px) {
+  .form-group {
+    width: 200px !important;
+    padding: 10px !important;
+  }
+}
 @media (min-width: 200px) and (max-width: 800px) {
   .content {
     background-image: url(none);
