--- a/src/sass/layout/main/_article.scss
+++ b/src/sass/layout/main/_article.scss
@@ -17,7 +17,6 @@ article {
       position: absolute;
       cursor: pointer;
       border-radius: 50%;
-
       @include widthAndheight(39px, 39px);
       background: #d5d5d5 0% 0% no-repeat padding-box;
       z-index: 1;
@@ -109,14 +108,35 @@ article {
     height: 35vh !important;
   }
 }
-// @media (min-width: 1000px) and (max-width: 1700px) {
-//   .next {
-//     top: 20% !important;
-//   }
-//   .prev {
-//     top: 20% !important;
-//   }
-// }
+@media (min-width: 1000px) and (max-width: 1500px) {
+  .next {
+    top: 15% !important;
+  }
+  .prev {
+    top: 15% !important;
+  }
+}
+@media (min-width: 900px) and (max-width: 1100px) {
+  .carousel-title {
+    font: italic normal normal 16px/18px "Poppins" !important;
+    color: #000;
+  }
+  .carousel-text {
+    font: normal normal 300 12px/14px "Poppins" !important;
+  }
+  .next,
+  .prev {
+    width: 25px !important;
+    height: 25px !important;
+  }
+  .next {
+    top: 12% !important;
+  }
+  .prev {
+    top: 12% !important;
+  }
+}
+
 @media (min-width: 500px) and (max-width: 800px) {
   .item {
     img {
